--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -8,6 +8,6 @@
 <div *ngIf="datos">
   <h1>Datos de la API:</h1>
   <ul>
-    <li *ngFor="let item of datos">{{ item.nombre }}</li>
+    <li *ngFor="let item of datos">{{ item.Name }}</li>
   </ul>
 </div>
