--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+<mat-drawer #drawer opened="true" mode="side" position="start">
+    <mat-nav-list>
+        <mat-list-item>
+            <button  mat-button><mat-icon>dashboard</mat-icon> Dashboard</button>
+        </mat-list-item>
+       
+    </mat-nav-list>
+    </mat-drawer>
