--- a/src/app/core/template/template.component.html
+++ b/src/app/core/template/template.component.html
@@ -1,5 +1,6 @@
-<app-header></app-header>
-<mat-drawer-container autosize>
+<div style="height: 100%; width: 100%;">
+    <app-header></app-header>
+<mat-drawer-container autosize  style="height: 100%; width: 100%;">
    
     <mat-drawer #drawer opened="true" mode="side" position="start">
     <mat-nav-list>
@@ -16,3 +17,4 @@
         </div>
     </mat-drawer-content>
 </mat-drawer-container>
+</div>
