--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -1,34 +1,38 @@
-<div class="grid-container">
-  <mat-card>
-    <mat-card-header><h1 class="mat-h1">Materiales de reciclaje</h1></mat-card-header>
-    <mat-card-content>
-      <mat-form-field class="full-width">
-        <mat-label>Nombre Material</mat-label>
-        <input matInput #filtro>
-        <button (click)="filterMaterial(filtro.value)" mat-icon-button matSuffix color="primary" >
-          <mat-icon>search</mat-icon>
-        </button>
-      </mat-form-field> 
-    </mat-card-content>
-  </mat-card>
+
+<mat-grid-list cols="4" >
+
+  <mat-grid-tile  *ngFor="let item of datos" >
+    <mat-card class="example-card">
+      <mat-card-header>
+        
+        <mat-card-title>{{item.Name}}</mat-card-title>
+       
+      </mat-card-header>
+      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+      <mat-card-content>
+        <p>
+          {{item.Description}}
+        </p>
+        <h5>Precio</h5>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+   
+        
+    
+
 
   
-  <mat-grid-list cols="4" rowHeight="15em">
-    <mat-grid-tile  *ngFor="let item of datos" >
-      <mat-card class="custom-card">
-      <mat-card-header class="header">
-        <mat-card-title>{{item.Name}} </mat-card-title>
-        <mat-icon class="mat-18">info</mat-icon>
-        <mat-card-subtitle class="header">{{item.Description}}</mat-card-subtitle>
-      </mat-card-header>
-      
-     
-        <img  mat-card-image src="https://th.bing.com/th/id/OIG.q3e2QADAw3qonNEWSADa?pid=ImgGn"  class="custom-image">
-      
-    </mat-card>
-        </mat-grid-tile>
-  </mat-grid-list>
 
+</mat-grid-list>
+ 
+
+
+  
 
  
 
