--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -6,27 +6,23 @@
       <mat-card-header>
         
         <mat-card-title>{{item.Name}}</mat-card-title>
+   
        
       </mat-card-header>
       <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
-          {{item.Description}}
+         Descripcion: {{item.Description}}
         </p>
-        <h5>Precio</h5>
+        <h5> Precio: {{item.Price}}</h5>
       </mat-card-content>
       <mat-card-actions>
         <button mat-button>LIKE</button>
         <button mat-button>SHARE</button>
+        
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
-   
-        
-    
-
-
-  
 
 </mat-grid-list>
  
