--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -17,7 +17,7 @@
         <h5> Precio: {{item.Price}}</h5>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="detailMaterial(item.Id)"><mat-icon>informaation</mat-icon></button>
+        <button color="primary" mat-button (click)="detailMaterial(item.Id)"><mat-icon>informaation</mat-icon></button>
         <button mat-button>Canjear</button>
         
       </mat-card-actions>
