--- a/src/app/center/index/index.component.html
+++ b/src/app/center/index/index.component.html
@@ -1,27 +1,25 @@
 
-<mat-grid-list cols="4" >
+<mat-grid-list cols="4" class=" example-card" >
 
     <mat-grid-tile  *ngFor="let item of datos" >
-      <mat-card class="example-card">
-        <mat-card-header>
-          
-          <mat-card-title>{{item.Name}}</mat-card-title>
-     
-         
+      <mat-card class=" exa">
+        
+        <mat-card-header>        
+          <h1 color="primary"> Centro: {{item.Name}}</h1>
         </mat-card-header>
        
-        <mat-card-content>
-          <p>
-           Descripcion: {{item.Description}}
-          </p>
-          <h5> Precio: {{item.Price}}</h5>
+        <mat-card-content class="left-align">
+          <p>Direccion: {{item.Provincia}}, {{item.Canton}}, {{item.Distrito}}</p>
+          <p> Horario: {{item.Schecudale}}</p>
+          <p> Numero: {{item.Numero}}</p>
         </mat-card-content>
-        <mat-card-actions>
-          <button mat-button (click)="detailMaterial(item.Id)"><mat-icon>informaation</mat-icon></button>
-          <button mat-button>Canjear</button>
-          
+        <mat-card-actions class="absolute-bottom-right">
+          <button color="primary" mat-button (click)=" detailCenter(item.Id)"><mat-icon>informacion</mat-icon></button>
         </mat-card-actions>
+       
       </mat-card>
+    
+      
     </mat-grid-tile>
   
   </mat-grid-list>
