--- a/src/app/orden/orden-center/orden-center.component.html
+++ b/src/app/orden/orden-center/orden-center.component.html
@@ -3,15 +3,9 @@
 <div class="grid-container">
     <mat-card>
       <mat-card-header><h1 class="mat-h1">Historial de canjes</h1></mat-card-header>
-      <mat-card-content>
-        <mat-label>Filtrar por usuario</mat-label>
-         
-        <mat-label><p> </p> </mat-label>
-        <select id="usuarios" class="mi-combobox"  (change)=" onUsuarioChange($event)">
-          <option value="" disabled selected>
-          <option *ngFor="let item of datosUsuario" [value]="item.Id">{{ item.Name }}</option>
-        </select>
-      </mat-card-content>
+      
+        <h1 *ngIf="datos">  {{datos[0].RecicleCenter.Name }}</h1>
+        
     </mat-card>
 
   </div>
@@ -30,11 +24,6 @@
         <td mat-cell *matCellDef="let row">{{ row.Id}}</td>
       </ng-container>
 
-      <!-- Nombre Column -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Centro de acopio</th>
-        <td mat-cell *matCellDef="let row">{{ row.RecicleCenter.Name}}</td>
-      </ng-container>
 
       <!-- Precio Column -->
       <ng-container matColumnDef="fecha">
@@ -57,9 +46,9 @@
             matTooltip="Detalle Canje"
             aria-label="Detalle Canje"
             color="primary"
-          
+            (click)=" detailCanje(row.Id)"
           >
-            <mat-icon class="mat-18" (click)=" detailCanje(row.Id)">info</mat-icon>
+            <mat-icon class="mat-18" >info</mat-icon>
           </button>
         </td>
       </ng-container>
