--- a/src/app/orden/index-orden/index-orden.component.css
+++ b/src/app/orden/index-orden/index-orden.component.css
@@ -1,9 +1,30 @@
 .mi-combobox {
-    width: 200px; /* Ajusta el tamaño según tus necesidades */
-    margin: 10px; /* Ajusta los márgenes según tus necesidades */
-    padding: 5px; /* Ajusta el relleno según tus necesidades */
-    background-color:  #343440 ;/* Tu color primario aquí */;
-    color: aqua;/* Color del texto */;
-    /* Otros estilos que desees agregar */
-  }
-  
+  width: 200px;
+  /* Ajusta el tamaño según tus necesidades */
+  margin: 10px;
+  /* Ajusta los márgenes según tus necesidades */
+  padding: 5px;
+  /* Ajusta el relleno según tus necesidades */
+  background-color:  #343440;
+  /* Tu color primario aquí */
+  ;
+  color: #4AD9A4;
+  /* Color del texto */
+  ;
+  /* Otros estilos que desees agregar */
+}
+
+
+
+.custom-button {
+  color: #ffffff;
+  background-color: #343440;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.custom-button:hover {
+  color: #4AD9A4; 
+}
