--- a/src/app/orden/index-orden/index-orden.component.html
+++ b/src/app/orden/index-orden/index-orden.component.html
@@ -2,7 +2,7 @@
 
 <div class="grid-container">
     <mat-card>
-      <mat-card-header><h1 class="mat-h1">Historial de canjes</h1></mat-card-header>
+      <mat-card-header><h1 >Historial de canjes</h1></mat-card-header>
       <mat-card-content>
         <mat-label>Filtrar por usuario</mat-label>
          
@@ -56,7 +56,7 @@
             color="accent"
             matTooltip="Detalle Canje"
             aria-label="Detalle Canje"
-            color="primary"
+            class="custom-button"
             (click)=" detailCanje(row.Id)"
           >
             <mat-icon class="mat-18" >info</mat-icon>
