--- a/src/app/material/dialog/dialog.component.html
+++ b/src/app/material/dialog/dialog.component.html
@@ -7,6 +7,7 @@
     <mat-dialog-content>
         
         <div class="row diagCon">
+            
             <h2 mat-dialog-title color="primary" style="font-size: 50px;">{{ datos.Name }}</h2>
             <div class="col-6  dialogDivision1" style="border-left: 2px solid white;">
                
@@ -14,6 +15,7 @@
                     <li><strong>Descripcion</strong>:{{ datos.Description }}</li>
                     <li><strong>Precio</strong>: {{ datos.Price | currency : "USD" }}</li>
                     <li><strong>Unidad de compra: </strong>{{datos.Unit}}</li>
+                    <li><strong>Color del material: </strong>{{datos.Color}}</li>
                     <li><strong>Centros de Reciclaje</strong>
                          <ul *ngIf="datos.RecicleCenter">
                             <li *ngFor="let item of datos.RecicleCenter">{{ item.Name }}</li>
