add detail dialog

--- a/src/app/material/dialog/dialog.component.html
+++ b/src/app/material/dialog/dialog.component.html
@@ -22,7 +22,7 @@
                   </ul>
             </div>
             <div class="col-6 dialogDivision2">
-                <img id="imgDia" src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+                <img id="imgDia" src={{datos.image}}>
             </div>
         </div>
        
