--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -9,7 +9,7 @@
    
        
       </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+      <img mat-card-image src={{item.image}} alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
          Descripcion: {{item.Description}}
