--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,10 +2,10 @@
     <button  mat-icon-button>
         <mat-icon>menu</mat-icon>
     </button>
-    <span>Material UI Tutorial</span>
+    <span>Ecosolucions O&P</span>
     <span class="example-spacer"></span>
     <button mat-button>Home</button>
-    <button mat-button>pp</button>
+  
     
 </mat-toolbar>
 
