--- a/src/app/center/index/index.component.html
+++ b/src/app/center/index/index.component.html
@@ -1,5 +1,5 @@
 <mat-grid-list cols="4" class="">
-
+  <mat-card-header><h1 >Centros de acopio</h1></mat-card-header>
   <mat-grid-tile *ngFor="let item of datos" > 
     <mat-card >
       <mat-card-header class="custom-card-header center-text" >
