--- a/src/app/orden/detail/detail.component.html
+++ b/src/app/orden/detail/detail.component.html
@@ -1,9 +1,9 @@
 <div class="content">
-    <h1 id="producto-titulo" class="mb-3 mt-5" style="font-size: 1.8rem !important;">Detalle del canje</h1>
+    <h1 id="producto-titulo" class="mb-3 mt-5" style="font-size: 1.8rem !important;">CANJE: {{ datos.Id }} </h1>
 
     <div class="align-at-same-height">
         <div class="left-align">
-            <h3>Numero de Orden : {{ datos.Id }}</h3>
+           
             <h3>Fecha: {{ datos.Date |  date:'dd-MM-yyyy ' }}</h3>
             <h3>Centro de acopio: {{ datos.RecicleCenter.Name }}</h3>
             <h3>Cliente: {{ datos.User.Name }}</h3>
@@ -15,6 +15,7 @@
             <div class="card-body">
                 <div class="card-text">
                     <div class="col-lg-12 col-md-12 col-sm-12 mt-5 table-container">
+                        <h2 style="margin-bottom: 10px;">Desglose del canje</h2>
                         <table class="table table-striped w-100">
                             <thead>
                                 <tr>
@@ -47,7 +48,7 @@
         <div class="container-fluid card w-100" style="width: 18rem;">
             <div class="card-body">              
                 <div class="card-text">
-                    <h1>Total : {{ datos.Total }}</h1>
+                    <h1>Total : {{ datos.Total }} eco$</h1>
                 </div>
             </div>
         </div>
