Fix desing full contend

--- a/src/app/center/index/index.component.html
+++ b/src/app/center/index/index.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" class="">
+<mat-grid-list cols="4" class="" style="min-height: 93.1vh;">
   <mat-card-header><h1 >Centros de acopio</h1></mat-card-header>
   <mat-grid-tile *ngFor="let item of datos" > 
     <mat-card >
