--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="title-container">
   <h1>Materiales para canjear</h1>
 </div>
-<mat-grid-list cols="3" >
+<mat-grid-list cols="3" style="min-height: 84.15vh; ">
   <mat-grid-tile *ngFor="let item of datos">
     <div class="card">
     <mat-card class="example-card">
