--- a/src/app/orden/detail/detail.component.html
+++ b/src/app/orden/detail/detail.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" style="min-height: 85.80vh;">
     <h1 id="producto-titulo" class="mb-3 mt-5" style="font-size: 1.8rem !important;">CANJE: {{ datos.Id }} </h1>
 
     <div class="align-at-same-height">
@@ -48,4 +48,5 @@
                 </div>
             </div>
         </div>
-    </div>          
+    </div>  
+</div>
