--- a/src/app/orden/index-orden/index-orden.component.html
+++ b/src/app/orden/index-orden/index-orden.component.html
@@ -21,7 +21,7 @@
   </mat-card>
 </div>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" style="min-height: 76.75vh;">
   <table mat-table [dataSource]="datos" class="full-width-table" matSort aria-label="Elements">
     <!-- Nombre Column -->
     <ng-container matColumnDef="id">
