--- a/src/app/orden/orden-center/orden-center.component.html
+++ b/src/app/orden/orden-center/orden-center.component.html
@@ -8,9 +8,9 @@
         
     </mat-card>
 
-  </div>
+</div>
 
-  <div class="mat-elevation-z8">
+  <div class="mat-elevation-z8" style="min-height: 86.15vh;">
     <table
       mat-table
       [dataSource]="datos"
