--- a/src/app/center/create/create.component.html
+++ b/src/app/center/create/create.component.html
@@ -1,8 +1,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <form [formGroup]="CenterForm" enctype="multipart/form-data">
+   <div style="min-height: 93.1vh;">
     <input type="hidden" formControlName="id"/>
-    <mat-card>
+    <mat-card >
         <mat-card-header>
             <h1>{{TitleForm}}</h1>
         </mat-card-header>
@@ -93,5 +94,6 @@
         </div>
 
     </mat-card-actions>
+   </div>
 </form>
 
