--- a/src/app/material/create/create.component.html
+++ b/src/app/material/create/create.component.html
@@ -2,9 +2,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <h2>CREATE</h2>
-<form [formGroup]="MaterialForm" enctype="multipart/form-data">
+<form [formGroup]="MaterialForm" enctype="multipart/form-data" >
     <input type="hidden" formControlName="id"/>
-    <mat-card>
+    <mat-card style="min-height: 87.90vh;">
         <mat-card-header>
             <h1>{{TitleForm}}</h1>
         </mat-card-header>
