--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,11 @@
 <mat-toolbar  class="mat-elevation-z8">
+    
+   
+
     <button  mat-icon-button>
         <mat-icon>menu</mat-icon>
     </button>
+    <img src="/imgs/exa.jpg" alt="">
     <span>Ecosolucions O&P</span>
     <span class="example-spacer"></span>
     <button mat-button>Home</button>
