--- a/src/app/core/template/template.component.html
+++ b/src/app/core/template/template.component.html
@@ -1,7 +1,7 @@
 <div style="height: 100%; width: 100%;">
     <app-header></app-header>
-<mat-drawer-container autosize  style="height: 100%; width: 100%;">
-   
+<mat-drawer-container autosize  style="min-height: 93.1vh; width: 100%;">
+    
     <mat-drawer #drawer opened="true" mode="side" position="start">
     <mat-nav-list>
         <mat-list-item>
