--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<div class="container-fluid" id="contend">
+    <mat-card >
+        
+        <mat-card-content id="card">
+            <div class="container">
+        <div class="row" style="height: 100%; padding: auto;">
+            <div class="col-6" style="padding: 20px;">
+                <img  src="../assets/img/Logo1.jpg">
+            </div>
+            <div class="col-6"style="padding: 30px;" >
+                <div class="form-information-childs">
+                    <h2>Iniciar Sesión </h2>
+                    
+                   
+                    <form class="example-form row" >
+                        <mat-form-field class="example-full-width col-12">
+                          <mat-label>Correo electronico</mat-label>
+                          <input matInput type="email" value="Sushi">
+                        </mat-form-field>
+                      
+                        <mat-form-field class="example-full-width col-12">
+                          <mat-label>Contraseña</mat-label>
+                          <input matInput placeholder="Ex. Pizza" type="password" value="Sushi">
+            
+                        </mat-form-field>
+
+                        <button style="width: 200px;" mat-raised-button color="accent"  >Iniciar sesion</button>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
+        </mat-card-content>
+    </mat-card>
+</div>
+
